syntax = "proto3";

option cc_generic_services = true;

package example;

message empty{
}

message request{
	string msg = 1;
};

message response{
	string msg = 1;
};

service EchoService{
	rpc Echo(request) returns (response);
	rpc RegisterEcho(empty) returns (response);
}

